@@ -1,6 +1,12 @@
 Revision history {{$dist->name}}
 
 {{$NEXT}}
+	- Hide internals: the POD parser is moved to a private package and
+	  the Pod::Spell package now only exposes the public interface.
+	  This is a first step towards rewriting the parser using Pod::Simple
+	  (planned for Pod-Spell-2.0).
+	- 'parse_from_file' and 'parse_from_filehandle' are now explicitely
+	  documented (by copying doc from Pod::Parser).
 
 1.19      2016-02-20
 	- Don't set $Text::Wrap::huge globally, but localize it
